rm some xml